--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -1,8 +1,7 @@
-.box {
+.box2 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     width: 100%;
     height: 60vh;
   }
